restructured the JMeter project files and it's source files.